--- a/app/src/main/res/layout/activity_ogrenim_secim.xml
+++ b/app/src/main/res/layout/activity_ogrenim_secim.xml
@@ -20,6 +20,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
+        android:onClick="bilgilendir"
         android:text="🅱🅸🅻🅶🅸🅻🅴🅽🅳🅸🆁🅼🅴"
         android:textColor="@color/colorAccent"
         android:textSize="23sp"
